refactor(CouponService): 중복 로직 제거
- dto 이름 변경